--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                 <a href="./Resume/Resume.pdf" class="btn">Download CV</a>
             </div>
             <div class="home-img">
-                <img src="./image/00100sPORTRAIT_00100_BURST20221220175442719_COVER-01.jpeg.jpg" alt="">
+                <img src="./00100sPORTRAIT_00100_BURST20221220175442719_COVER-01.jpeg.jpg" alt="">
             </div>
         </section>
         <section class="about" id="about">
             <div class="about-img">
-                <img src="./image/world.jpg" alt="">
+                <img src="./world.jpg" alt="">
             </div>
             <div class="about-content">
                 <h2 class="heading">About<span>Me</span></h2>
@@ -51,7 +51,7 @@
             <h2 class="heading">Latest<span>Project</span></h2>
             <div class="portfolio-container">
                 <div class="portfolio-box">
-                    <img src="./image/jan-vlacuha-Rns_A8bJ_dQ-unsplash.jpg"alt="">
+                    <img src="./jan-vlacuha-Rns_A8bJ_dQ-unsplash.jpg"alt="">
                     <div class="portfolio-layer">
                         <h4>Perssonal Portfolio</h4>
                         <p>In this project I try making my own portfolio website for myself. Showcase my projects, my social media handles, my experience on the website.</p>
@@ -59,7 +59,7 @@
                     </div>
                 </div>
                 <div class="portfolio-box">
-                    <img src="./image/austin-poon-JO_S6ewBqAk-unsplash.jpg"alt="">
+                    <img src="./austin-poon-JO_S6ewBqAk-unsplash.jpg"alt="">
                     <div class="portfolio-layer">
                         <h4>Online flower shop</h4>
                         <p>It is a fully e-commerce web application for flowers.</p>
@@ -67,7 +67,7 @@
                     </div>
                 </div>
                 <div class="portfolio-box">
-                    <img src="./image/nubelson-fernandes--Xqckh_XVU4-unsplash.jpg"alt="">
+                    <img src="./nubelson-fernandes--Xqckh_XVU4-unsplash.jpg"alt="">
                     <div class="portfolio-layer">
                         <h4>Wine shop management</h4>
                         <p>With the help of this application admin can see stock details of wines, manage and see all transactions with dealer etc.</p>
