--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a href="https://github.com/sudipbhanja123"><i class='bx bxl-github'></i></a>
                     <a href="mailto:sudipbhanja5g@gmail.com"><i class='bx bxs-envelope'></i></a>
                     <a href="https://www.instagram.com/bhanjasudip674/"><i class='bx bxl-instagram' ></i></a>
-                    <a href="www.linkedin.com/in/sudip-bhanja-744935257"><i class='bx bxl-linkedin-square' ></i></a>
+                    <a href="https://www.linkedin.com/in/sudip-bhanja123"><i class='bx bxl-linkedin-square' ></i></a>
                 </div>
                 <a href="./Resume/Resume.pdf" class="btn">Download CV</a>
             </div>
